# foundations

./: .gitmodules  CMakeLists.txt
include/: ImpresarioUtils.h  NetworkProxy.h  NetworkSocket.h  ParameterReceiver.h  RandomNumberGenerator.h  Time.h  Utils.h
include/mixin/: NonCopyable.h
include/network/: Proxy.h  Socket.h
include/utils/: RandomNumberGenerator.h  Time.h
src/: Arbiter.cpp  Arbiter.h  Bootstrapper.cpp  Bootstrapper.h  Circlet.h  Circulable.h  Config.cpp  Config.h  Coordinate.cpp  Coordinate.h  InvalidDeserializationException.h  Macros.h  NetworkProxy.cpp  NetworkProxy.h  NetworkSocket.cpp  NetworkSocket.h  NonCopyable.h  Packet.cpp  Packet.h  PacketCollection.cpp  PacketCollection.h  PacketReceiver.cpp  PacketReceiver.h  ParameterReceiver.cpp  Parcel.h  ParcelReceiver.cpp  ParcelReceiver.h  Point.cpp  Point.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  SerializedData.cpp  SerializedData.h  Time.cpp  Timer.cpp  Timer.h
src/arbiter/: Arbiter.h  BufferArbiter.h
src/circlet/: Circlet.cpp  Circlet.h  Circulable.h
src/network/: NetworkProxy.cpp  NetworkProxy.h  NetworkSocket.cpp  NetworkSocket.h  Parcel.cpp  Parcel.h  Proxy.cpp  SerializedData.h  Socket.cpp  Unwrap.cpp  Unwrap.h
src/parcel/: Parcel.cpp  Parcel.h  ParcelCollection.cpp  ParcelCollection.h  ParcelReceiver.h
src/percipient/: VolitiaPercipient.cpp  VolitiaPercipient.h
src/utils/: RandomNumberGenerator.cpp  Time.cpp
